--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,4 +1,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/apbhhcp3khyo8/public_html
-    - /bin/cp -R build/* $DEPLOYPATH
+    - /bin/cp -R dist/* $DEPLOYPATH
